RESOLVED FIXED228853
ASSERTION FAILED: !m_networkLoad in NetworkResourceLoader::~NetworkResourceLoader()
https://bugs.webkit.org/show_bug.cgi?id=228853
Summary ASSERTION FAILED: !m_networkLoad in NetworkResourceLoader::~NetworkResourceLo...
Fujii Hironori
Reported 2021-08-05 18:46:34 PDT
Created attachment 435046 [details] test patch ASSERTION FAILED: !m_networkLoad in NetworkResourceLoader::~NetworkResourceLoader() 1. Applying the test patch 2. Compile Mac Debug Tools/Scripts/build-webkit --debug 3. Run layout tests ./Tools/Scripts/run-webkit-tests --debug --no-build http/tests/fetch 4. The assertion fails in the next test case of http/tests/fetch/keepalive-fetch.html ASSERTION FAILED: !m_networkLoad /Volumes/Data/webkit/ga/Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp(137) : virtual WebKit::NetworkResourceLoader::~NetworkResourceLoader()
Attachments
test patch (927 bytes, patch)
2021-08-05 18:46 PDT, Fujii Hironori
no flags
response-clone-blob-crash-log.txt (84.62 KB, text/plain)
2021-08-05 18:46 PDT, Fujii Hironori
no flags
Patch (3.53 KB, patch)
2021-08-05 20:37 PDT, Fujii Hironori
no flags
Patch (3.61 KB, patch)
2021-08-06 13:51 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2021-08-05 18:46:52 PDT
Created attachment 435047 [details] response-clone-blob-crash-log.txt
Fujii Hironori
Comment 2 2021-08-05 19:08:54 PDT
MiniBrowser also can reproduce the assertion failure. 1. Applying the test patch 2. Start the test server ./Tools/Scripts/run-webkit-httpd 3. Start Mac Debug MiniBrowser 4. Select File → New WebKit2 Private Window 5. Go to http://127.0.0.1:8000/fetch/keepalive-fetch.html 6. Close the Private Window 7. The assertion fails
Fujii Hironori
Comment 3 2021-08-05 20:37:50 PDT
Alex Christensen
Comment 4 2021-08-06 11:10:02 PDT
Comment on attachment 435052 [details] Patch I think it would be better for the destructor of NetworkSession or something to call NetworkResourceLoader::cleanup on the kept alive loaders
Fujii Hironori
Comment 5 2021-08-06 13:29:47 PDT
It sounds a good idea. Will try. Thank you.
Fujii Hironori
Comment 6 2021-08-06 13:51:18 PDT
EWS
Comment 7 2021-08-06 15:18:56 PDT
Committed r280740 (240326@main): <https://commits.webkit.org/240326@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435084 [details].
Radar WebKit Bug Importer
Comment 8 2021-08-06 15:19:17 PDT
Note You need to log in before you can comment on or make changes to this bug.