ASSERTION FAILED: !m_networkLoad in NetworkResourceLoader::~NetworkResourceLoader() https://bugs.webkit.org/show_bug.cgi?id=228853

Reviewed by Alex Christensen.

Source/WebKit:

~NetworkResourceLoader() had the assertion ensuring m_networkLoad
was empty. But, this could fail in the following scenario. If a
'keepalive' fetch request is not finished and the page is
navigated away, its NetworkResourceLoader is transferred to the
NetworkSession by NetworkConnectionToWebProcess::transferKeptAliveLoad.
And, before the request is finished, if the NetworkSession is
destroyed, the kept alive NetworkResourceLoader is destroyed.

Test: http/tests/fetch/keepalive-fetch.html

* NetworkProcess/NetworkSession.cpp:
(WebKit::NetworkSession::~NetworkSession): Abort m_keptAliveLoads.

LayoutTests:

* http/tests/fetch/keepalive-fetch-expected.txt: Added.
* http/tests/fetch/keepalive-fetch.html: Added.


Canonical link: https://commits.webkit.org/240326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280740 268f45cc-cd09-0410-ab3c-d52691b4dbfc